// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`The RyskSDK > should initialise correctly with all config parameters passed 1`] = `
RyskSDK {
  "account": {
    "address": "0xb47B0b1e44B932Ae9Bb01817E7010A553A965Ea8",
    "experimental_signAuthorization": [Function],
    "nonceManager": undefined,
    "publicKey": "0x0422eea015a8664523fce2eed5de514ad98a29724755c488f3d11d913d5671c881bc2d7b1e0d17389604ef141a96830b14917b034b7621579d1159d694dd231798",
    "sign": [Function],
    "signMessage": [Function],
    "signTransaction": [Function],
    "signTypedData": [Function],
    "source": "privateKey",
    "type": "local",
  },
  "calculateMarginRequirement": [Function],
  "cancelAndReplaceOrder": [Function],
  "cancelOpenOrdersForProduct": [Function],
  "cancelOrder": [Function],
  "cancelOrders": [Function],
  "chain": 421614,
  "ciaoAddress": "0x71728FDDF90233cc35D61bec7858d7c42A310ACe",
  "deposit": [Function],
  "domain": {
    "chainId": 421614n,
    "name": "rysk",
    "verifyingContract": "0x27809a3Bd3cf44d855f1BE668bFD16D34bcE157C",
    "version": "0.0.0",
  },
  "environment": "testnet",
  "getAccountHealth": [Function],
  "getKlines": [Function],
  "getOrderBook": [Function],
  "getProduct": [Function],
  "getProducts": [Function],
  "getServerTime": [Function],
  "getTickers": [Function],
  "getTradeHistory": [Function],
  "listBalances": [Function],
  "listOpenOrders": [Function],
  "listPositions": [Function],
  "logs": [
    {
      "msg": "Debug mode enabled",
    },
  ],
  "placeOrder": [Function],
  "placeOrders": [Function],
  "publicClient": {},
  "rpc": "https://test-rpc.quiknode.pro",
  "subAccountId": 2,
  "verifierAddress": "0x27809a3Bd3cf44d855f1BE668bFD16D34bcE157C",
  "withdraw": [Function],
}
`;

exports[`The RyskSDK > should initialise correctly with only required params 1`] = `
RyskSDK {
  "account": {
    "address": "0xb47B0b1e44B932Ae9Bb01817E7010A553A965Ea8",
    "experimental_signAuthorization": [Function],
    "nonceManager": undefined,
    "publicKey": "0x0422eea015a8664523fce2eed5de514ad98a29724755c488f3d11d913d5671c881bc2d7b1e0d17389604ef141a96830b14917b034b7621579d1159d694dd231798",
    "sign": [Function],
    "signMessage": [Function],
    "signTransaction": [Function],
    "signTypedData": [Function],
    "source": "privateKey",
    "type": "local",
  },
  "calculateMarginRequirement": [Function],
  "cancelAndReplaceOrder": [Function],
  "cancelOpenOrdersForProduct": [Function],
  "cancelOrder": [Function],
  "cancelOrders": [Function],
  "chain": 421614,
  "ciaoAddress": "0x71728FDDF90233cc35D61bec7858d7c42A310ACe",
  "deposit": [Function],
  "domain": {
    "chainId": 421614n,
    "name": "rysk",
    "verifyingContract": "0x27809a3Bd3cf44d855f1BE668bFD16D34bcE157C",
    "version": "0.0.0",
  },
  "environment": "testnet",
  "getAccountHealth": [Function],
  "getKlines": [Function],
  "getOrderBook": [Function],
  "getProduct": [Function],
  "getProducts": [Function],
  "getServerTime": [Function],
  "getTickers": [Function],
  "getTradeHistory": [Function],
  "listBalances": [Function],
  "listOpenOrders": [Function],
  "listPositions": [Function],
  "logs": [],
  "placeOrder": [Function],
  "placeOrders": [Function],
  "publicClient": {},
  "rpc": "https://sepolia-rollup.arbitrum.io/rpc",
  "subAccountId": 1,
  "verifierAddress": "0x27809a3Bd3cf44d855f1BE668bFD16D34bcE157C",
  "withdraw": [Function],
}
`;
